--- a/00-html-css/styles.css
+++ b/00-html-css/styles.css
@@ -1,12 +1,9 @@
-/* Se aplica a todos los elementos */
-/* Se reesetean todas estas propiedades a todos los elementos */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-/* Variables Globales */
 :root {
   --primary: #3b4550;
   --primary-dark: #0a3d66;
@@ -24,7 +21,6 @@
 }
 
 
-
 @font-face {
   font-family: 'Inter Variable';
   font-style: normal;
@@ -33,8 +29,6 @@
   src: url(https://cdn.jsdelivr.net/fontsource/fonts/inter:vf@latest/latin-wght-normal.woff2) format('woff2-variations');
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
-
-
 
 
 body {
@@ -50,15 +44,20 @@ body {
 
 
 
-
-
 /* Títulos principales */
 h1 {
-  font-size: 2.25rem;
-  font-weight: 900;
-  margin-bottom: 1rem;
+  font-size: 1.5rem;
   line-height: 1.2;
   text-wrap: balance;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+
+  svg {
+    width: 2rem;
+    height: 2rem;
+    color: var(--primary-light);
+  }
 }
 
 h1 + p {
@@ -181,25 +180,34 @@ form input[type="text"]::placeholder {
   color: #64748b;
 }
 
-form button[type="submit"] {
+button {
   padding: 0.75rem 1.5rem;
   border-radius: 0.5rem;
   background-color: var(--primary);
   color: white;
-  font-weight: 700;
+  font-weight: 400;
   border: none;
   cursor: pointer;
-  transition: background-color 0.2s;
+  transition: all 0.2s;
   font-family: inherit;
   font-size: 1rem;
   white-space: nowrap;
-}
 
-form button[type="submit"]:hover,
-form button[type="submit"]:focus {
-  background-color: var(--primary-hover);
-  outline: 2px solid white;
-  outline-offset: 2px;
+  &:hover, /* pseudo-clase que significa que el ratón está encima */
+  &:focus { /* pseudo-clase que significa que el elemento tiene el foco */
+    background-color: var(--primary-hover);
+    outline: 2px solid white;
+    outline-offset: 2px;
+  }
+
+  &:active { 
+    transform: scale(0.90)
+  }
+
+  &:disabled {
+    opacity: .5;
+    pointer-events: none;
+  }
 }
 
 /* Features Section */
@@ -310,4 +318,144 @@ article {
   h3 {
     font-weight: 500;
   }
+}
+
+/* Jobs Search */
+.jobs-search {
+  margin: 0;
+  padding: 0;
+  height: auto !important;
+
+  h1 {
+    font-size: 2.5rem;
+    margin-bottom: .25rem;
+  }
+
+  p {
+    font-size: 1.125rem;
+    color: var(--text-muted);
+    margin-bottom: 1.5rem;
+  }
+
+  .search-bar {
+    background: var(--input-bg);
+    padding: .25rem .5rem;
+  }
+
+  .search-filters {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: .5rem;
+  }
+
+  form {
+    width: 100%;
+    max-width: 1280px;
+  }
+
+  form div {
+    background: none;
+    box-shadow: none;
+    padding: 0;
+  }
+}
+
+.jobs-listings {
+  border: 1px solid rgba(255, 255, 255, .3);
+  border-radius: 1rem;
+
+  article {
+    background: none;
+    box-shadow: none;
+    border-radius: 0;
+    border-bottom: 1px solid rgba(255, 255, 255, .3);
+    margin: 0;
+
+    display: flex;
+    align-items: start;
+    gap: 1rem;
+
+    small {
+      font-size: .875rem;
+      opacity: .75;
+    }
+
+    p {
+      margin-top: 0.5rem
+    }
+
+    &:last-child {
+      border-bottom: none;
+    }
+  }
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  gap: 0.5rem;
+  margin-block: 2rem;
+
+  a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 2.5rem;
+    height: 2.5rem;
+    text-decoration: none;
+    color: var(--text-muted);
+    border-radius: 0.375rem;
+    transition: all .3s;
+
+    &:hover, &:focus {
+      background-color: #fff;
+    }
+
+    &:active {
+      transform: scale(0.90);
+    }
+
+    &.is-active {
+      background-color: var(--primary-light);
+      color: white;
+      pointer-events: none;
+    }
+  }
+}
+
+.button-apply-job {
+  background: #09f;
+  float: right;
+
+  &.is-applied {
+    background: #4caf50;
+    pointer-events: none;
+  }
+}
+
+
+.job-detail
+{
+  width: 100% !important;
+  max-width: 1280px !important;
+  text-align: left !important;
+  margin: 0 auto;
+  padding: 1rem;
+
+  flex-direction: column;
+  justify-content: left  !important;
+  align-items: left !important;
+}
+
+.breadcrumbs {
+  margin-left: -20px; 
+  margin-top: 50px; 
+  margin-bottom: 60px; 
+  color: gray;
+  
+}
+
+.div-horizontal {
+  border-top: 1px solid var(--border);
+   margin-bottom: 25px;
 }
