--- a/00-html-css/styles.css
+++ b/00-html-css/styles.css
@@ -371,9 +371,13 @@ article {
     border-bottom: 1px solid rgba(255, 255, 255, .3);
     margin: 0;
 
-    display: flex;
+    display: flex;   /* Valor original */
     align-items: start;
     gap: 1rem;
+
+    &.is-hidden {
+      display: none;
+    } 
 
     small {
       font-size: .875rem;
@@ -459,3 +463,37 @@ article {
   border-top: 1px solid var(--border);
    margin-bottom: 25px;
 }
+
+
+
+
+
+
+
+select {
+  padding: 0.625rem 1.25rem;
+  background-color: #242d3a !important; 
+  border: 0;
+  border-radius: 0.5rem;
+  font-size: 0.875rem;
+  color: #ddd;
+  cursor: pointer;
+  transition: all 0.2s;
+  appearance: none;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24' fill='none' stroke='white' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 0.5rem center;
+  padding-right: 2.5rem;
+
+  &:hover {
+    background-color: var(--primary-hover);
+    color: white;
+  }
+
+  &:focus {
+    outline: 2px solid #1173d4;
+    outline-offset: 2px;
+  }
+}
+
+
