--- a/02-react/src/index.css
+++ b/02-react/src/index.css
@@ -340,6 +340,7 @@ article {
   .search-bar {
     background: var(--input-bg);
     padding: .25rem .5rem;
+    position: relative;
   }
 
   .search-filters {
